Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116752

Floatable non-closable dock widget can be closed when floating, but cannot be reopened

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • 6c90aa029 (dev), eb1a6263c (6.6), 601a1d548 (6.5)

    Description

      To reproduce:

      • run attached example
      • click to float the dock
      • focus the floating dock
      • press Alt+F4

      The window closes and it cannot be made visible again because it is non-closable and thus the entry in the dock context menu is disabled.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes